manifests/cloud/flame/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: flame
  name: flame
  namespace: cloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flame
  template:
    metadata:
      labels:
        app: flame
    spec:
      serviceAccountName: flame
      containers:
      - image: pawelmalak/flame:multiarch
        name: flame
        ports:
        - containerPort: 5005
        volumeMounts:
        - name: flame-appdata
          mountPath: /app/data
      volumes:
        - name: flame-appdata
          persistentVolumeClaim:
            claimName: flame-appdata
