manifests/cloud/flame/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: flame
  labels:
    app: flame
  namespace: cloud
spec:
  selector:
    app: flame
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 5005
      targetPort: 5005
